--- a/index.html
+++ b/index.html
@@ -17,15 +17,12 @@
     </style>
   </head>
   <body>
-    <h1>CURRICULUM VITAE</h1>
-    <h2>Məstanov Məstan Məstan oğlu</h2>
+    <h1 align="center">CURRICULUM VITAE</h1>
+    <h2 align="center">Məstanov Məstan Məstan oğlu</h2>
 
-    <img
-      width="180"
-      src="https://i.guim.co.uk/img/media/8282695e7f658f7c8e708290c93f14b84f0c8a68/0_483_3600_2161/master/3600.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=acfcc7c8fb733c6a4a2185c337500247"
-    />
+    <center><img width="180" src="https://i.guim.co.uk/img/media/8282695e7f658f7c8e708290c93f14b84f0c8a68/0_483_3600_2161/master/3600.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=acfcc7c8fb733c6a4a2185c337500247"/></center>
 
-    <table>
+    <table align="center">
       <tr>
         <td><strong>Ad ve soyad:</strong> Mestan Mestanov</td>
       </tr>
@@ -41,9 +38,9 @@
       </tr>
     </table>
 
-    <h2>Tehsil</h2>
+    <h2 align="center">Tehsil</h2>
 
-      <table>
+      <table align="center">
         <tr>
           <th>Universitetin adi:</th>
           <th>Fakultet:</th>
@@ -58,8 +55,8 @@
         </tr>
       </table>
 
-    <h2>Diller</h2>
-    <table>
+    <h2 align="center">Diller</h2>
+    <table align="center">
       <tr>
         <th>Diller:</th>
         <th>Basha dushmek:</th>
@@ -85,8 +82,8 @@
         <td>Ela</td>
       </tr>
     </table>
-    <h2>Xususi bacariqlar</h2>
-    <table>
+    <h2 align="center">Xususi bacariqlar</h2>
+    <table align="center">
       <tr>
         <th colspan="4">Xususi bacariqlar</th>
       </tr>
