--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Document-CV</title>
     <style>
       table,
       tr,
@@ -13,18 +13,31 @@
         border: 2px solid #383636;
         border-collapse: collapse;
         font-size: x-large;
+        text-align: center;
+        font-family: Arial, Helvetica, sans-serif;
       }
     </style>
   </head>
   <body>
     <h1 align="center">CURRICULUM VITAE</h1>
+    <hr>
     <h2 align="center">Məstanov Məstan Məstan oğlu</h2>
 
-    <center><img width="180" src="https://i.guim.co.uk/img/media/8282695e7f658f7c8e708290c93f14b84f0c8a68/0_483_3600_2161/master/3600.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=acfcc7c8fb733c6a4a2185c337500247"/></center>
+    <center>
+      <img
+        width="180"
+        src="https://i.guim.co.uk/img/media/8282695e7f658f7c8e708290c93f14b84f0c8a68/0_483_3600_2161/master/3600.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=acfcc7c8fb733c6a4a2185c337500247"
+        alt="Burda Mestanin shekli var idi"/>
+    </center>
+    <hr>
+    <br>
 
     <table align="center">
       <tr>
         <td><strong>Ad ve soyad:</strong> Mestan Mestanov</td>
+      </tr>
+      <tr>
+        <td><strong>Doqum tarixi:</strong>09 mart 2015</td>
       </tr>
       <tr>
         <td><strong>Unvan:</strong> Sumqayit</td>
@@ -37,25 +50,29 @@
         <td><strong>Email:</strong> myau@gmail.com</td>
       </tr>
     </table>
+    <hr>
+    <br>
 
-    <h2 align="center">Tehsil</h2>
+    <h1 align="center">Tehsil</h1>
 
-      <table align="center">
-        <tr>
-          <th>Universitetin adi:</th>
-          <th>Fakultet:</th>
-          <th>Ixtisas:</th>
-          <th>Derece:</th>
-        </tr>
-        <tr>
-          <td>Sichantutma universiteti</td>
-          <td>Sichantutma</td>
-          <td>Sichantutan</td>
-          <td>Sensey</td>
-        </tr>
-      </table>
+    <table align="center">
+      <tr>
+        <th>Universitetin adi:</th>
+        <th>Fakultet:</th>
+        <th>Ixtisas:</th>
+        <th>Derece:</th>
+      </tr>
+      <tr>
+        <td>Sichantutma universiteti</td>
+        <td>Sichantutma</td>
+        <td>Sichantutan</td>
+        <td>Sensey</td>
+      </tr>
+    </table>
+    <hr>
+    <br>
 
-    <h2 align="center">Diller</h2>
+    <h1 align="center">Diller</h1>
     <table align="center">
       <tr>
         <th>Diller:</th>
@@ -82,7 +99,9 @@
         <td>Ela</td>
       </tr>
     </table>
-    <h2 align="center">Xususi bacariqlar</h2>
+    <hr>
+    <br>
+    <h1 align="center">Xususi bacariqlar</h1>
     <table align="center">
       <tr>
         <th colspan="4">Xususi bacariqlar</th>
@@ -97,6 +116,27 @@
         <td>5)Qachmaq</td>
         <td>6)Ev daqitmaq</td>
         <td>7)Tezeden yatmaq</td>
+      </tr>
+    </table>
+    <hr>
+    <br>
+    <h1 align="center">Shexsi melumatlar</h1>
+
+    <table align="center">
+      <tr>
+        <th colspan="4">Ozun haqqinda melumat</th>
+      </tr>
+
+      <tr>
+        <td>1)Tuklu</td>
+        <td>2)Celd</td>
+        <td>3)Yataqan</td>
+        <td>4)Qarinqulu</td>
+      </tr>
+
+      <tr>
+        <td colspan="2">5)Introvert</td>
+        <td colspan="2">6)Sosiopat</td>
       </tr>
     </table>
   </body>
